Modification du fichier html de la modale
Rectification du nom de la classe de la div contenant la modale.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
     <body>
         
-        <div id="myModal" class="myModal">
+        <div id="myModal" class="modal">
             <div class="modal__content">
                 <button class="modal__close-button">X</button>
                 <p class="modal__message">Votre message a bien été envoyé !</p>
